test/files/neg/t8754-java-only/A_2.java
public class A_2 {}

interface Component<T> {
	public ListModel<T> getModel();
}

interface ListModel<T> {

}
